@@ -9,6 +9,9 @@ Major changes since man-db 2.4.4:
 	o --with-* options are now available at configure time for most of
 	  the auxiliary program locations that you might want to override.
 
+	o man now supports the MANPAGER environment variable, overriding
+	  PAGER.
+
 man-db 2.4.4 (12 February 2007)
 ===============================
 
