@@ -1,3 +1,9 @@
+Wed Apr 11 04:37:35 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (main): Support MANPAGER, overriding PAGER.
+	* man/man1/man.man1 (OPTIONS, ENVIRONMENT): Document MANPAGER.
+	* docs/NEWS: Document this.
+
 Thu Apr  5 18:00:00 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/lexgrog.l: Break whatis definitions at .IP, .HP, .RS, and .RE
